// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatNavigationTree creates the navigation tree for serverless 1`] = `
Object {
  "body": Array [
    Object {
      "breadcrumbStatus": "hidden",
      "children": Array [
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "id": "discover:",
              "link": "discover",
              "title": "Discover",
            },
            Object {
              "children": Array [
                Object {
                  "id": "overview",
                  "link": "securitySolutionUI:overview",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Overview",
                },
                Object {
                  "id": "detection_response",
                  "link": "securitySolutionUI:detection_response",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Detection & Response",
                },
                Object {
                  "id": "cloud_security_posture-dashboard",
                  "link": "securitySolutionUI:cloud_security_posture-dashboard",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Cloud Security Posture",
                },
                Object {
                  "id": "cloud_security_posture-vulnerability_dashboard",
                  "link": "securitySolutionUI:cloud_security_posture-vulnerability_dashboard",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Cloud Native Vulnerability Management",
                },
                Object {
                  "id": "entity_analytics",
                  "link": "securitySolutionUI:entity_analytics",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Entity Analytics",
                },
                Object {
                  "id": "data_quality",
                  "link": "securitySolutionUI:data_quality",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Data Quality",
                },
              ],
              "id": "dashboards",
              "link": "securitySolutionUI:dashboards",
              "renderAs": "panelOpener",
              "title": "Dashboards",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "id": "rules-add",
                          "link": "securitySolutionUI:rules-add",
                          "title": "Add Rules",
                        },
                        Object {
                          "id": "rules-create",
                          "link": "securitySolutionUI:rules-create",
                          "title": "Create new rule",
                        },
                      ],
                      "id": "rules",
                      "link": "securitySolutionUI:rules",
                      "renderAs": "item",
                      "title": "Detection rules (SIEM)",
                    },
                    Object {
                      "id": "cloud_security_posture-benchmarks",
                      "link": "securitySolutionUI:cloud_security_posture-benchmarks",
                      "title": "Benchmarks",
                    },
                    Object {
                      "id": "exceptions",
                      "link": "securitySolutionUI:exceptions",
                      "title": "Shared exception lists",
                    },
                  ],
                  "id": "category-management",
                  "title": "Management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "coverage-overview",
                      "link": "securitySolutionUI:coverage-overview",
                      "title": "MITRE ATT&CK® Coverage",
                    },
                  ],
                  "id": "category-discover",
                  "title": "Discover",
                },
              ],
              "id": "rules-landing",
              "link": "securitySolutionUI:rules-landing",
              "renderAs": "panelOpener",
              "title": "Rules",
            },
            Object {
              "id": "alerts",
              "link": "securitySolutionUI:alerts",
              "title": "Alerts",
            },
            Object {
              "id": "attack_discovery",
              "link": "securitySolutionUI:attack_discovery",
              "title": "Attack discovery",
            },
            Object {
              "id": "cloud_security_posture-findings",
              "link": "securitySolutionUI:cloud_security_posture-findings",
              "title": "Findings",
            },
            Object {
              "children": Array [
                Object {
                  "id": "cases_create",
                  "link": "securitySolutionUI:cases_create",
                  "sideNavStatus": "hidden",
                  "title": "Create",
                },
                Object {
                  "id": "cases_configure",
                  "link": "securitySolutionUI:cases_configure",
                  "sideNavStatus": "hidden",
                  "title": "Settings",
                },
              ],
              "id": "cases",
              "link": "securitySolutionUI:cases",
              "renderAs": "panelOpener",
              "title": "Cases",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "id": "timelines-templates",
                      "link": "securitySolutionUI:timelines-templates",
                      "sideNavStatus": "hidden",
                      "title": "Templates",
                    },
                  ],
                  "id": "timelines",
                  "link": "securitySolutionUI:timelines",
                  "renderAs": "item",
                  "title": "Timelines",
                },
                Object {
                  "id": "notes",
                  "link": "securitySolutionUI:notes",
                  "renderAs": "item",
                  "title": "Notes",
                },
                Object {
                  "id": "osquery:",
                  "link": "osquery",
                  "renderAs": "item",
                  "title": "Osquery",
                },
              ],
              "id": "investigations",
              "link": "securitySolutionUI:investigations",
              "renderAs": "panelOpener",
              "title": "Investigations",
            },
            Object {
              "id": "threat_intelligence",
              "link": "securitySolutionUI:threat_intelligence",
              "title": "Intelligence",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-all",
                      "link": "securitySolutionUI:hosts-all",
                      "title": "All hosts",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-uncommon_processes",
                      "link": "securitySolutionUI:hosts-uncommon_processes",
                      "title": "Uncommon Processes",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-anomalies",
                      "link": "securitySolutionUI:hosts-anomalies",
                      "title": "Anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-events",
                      "link": "securitySolutionUI:hosts-events",
                      "title": "Events",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-risk",
                      "link": "securitySolutionUI:hosts-risk",
                      "title": "Host risk",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-sessions",
                      "link": "securitySolutionUI:hosts-sessions",
                      "title": "Sessions",
                    },
                  ],
                  "id": "hosts",
                  "link": "securitySolutionUI:hosts",
                  "renderAs": "item",
                  "title": "Hosts",
                },
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-flows",
                      "link": "securitySolutionUI:network-flows",
                      "title": "Flows",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-dns",
                      "link": "securitySolutionUI:network-dns",
                      "title": "DNS",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-http",
                      "link": "securitySolutionUI:network-http",
                      "title": "HTTP",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-tls",
                      "link": "securitySolutionUI:network-tls",
                      "title": "TLS",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-anomalies",
                      "link": "securitySolutionUI:network-anomalies",
                      "title": "Anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-events",
                      "link": "securitySolutionUI:network-events",
                      "title": "Events",
                    },
                  ],
                  "id": "network",
                  "link": "securitySolutionUI:network",
                  "renderAs": "item",
                  "title": "Network",
                },
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-all",
                      "link": "securitySolutionUI:users-all",
                      "title": "All users",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-authentications",
                      "link": "securitySolutionUI:users-authentications",
                      "title": "Authentications",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-anomalies",
                      "link": "securitySolutionUI:users-anomalies",
                      "title": "Anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-risk",
                      "link": "securitySolutionUI:users-risk",
                      "title": "User risk",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-events",
                      "link": "securitySolutionUI:users-events",
                      "title": "Events",
                    },
                  ],
                  "id": "users",
                  "link": "securitySolutionUI:users",
                  "renderAs": "item",
                  "title": "Users",
                },
              ],
              "id": "explore",
              "link": "securitySolutionUI:explore",
              "renderAs": "panelOpener",
              "title": "Explore",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "id": "fleet:agents",
                      "link": "fleet:agents",
                      "title": "Agents",
                    },
                    Object {
                      "id": "fleet:policies",
                      "link": "fleet:policies",
                      "title": "Policies",
                    },
                    Object {
                      "id": "fleet:enrollment_tokens",
                      "link": "fleet:enrollment_tokens",
                      "title": "Enrollment tokens",
                    },
                    Object {
                      "id": "fleet:uninstall_tokens",
                      "link": "fleet:uninstall_tokens",
                      "title": "Uninstall tokens",
                    },
                    Object {
                      "id": "fleet:data_streams",
                      "link": "fleet:data_streams",
                      "title": "Data streams",
                    },
                    Object {
                      "id": "fleet:settings",
                      "link": "fleet:settings",
                      "title": "Settings",
                    },
                  ],
                  "id": "fleet:",
                  "link": "fleet",
                  "title": "Fleet",
                },
                Object {
                  "children": Array [
                    Object {
                      "id": "policy",
                      "link": "securitySolutionUI:policy",
                      "title": "Policies",
                    },
                    Object {
                      "id": "trusted_apps",
                      "link": "securitySolutionUI:trusted_apps",
                      "title": "Trusted applications",
                    },
                    Object {
                      "id": "event_filters",
                      "link": "securitySolutionUI:event_filters",
                      "title": "Event filters",
                    },
                    Object {
                      "id": "host_isolation_exceptions",
                      "link": "securitySolutionUI:host_isolation_exceptions",
                      "title": "Host isolation exceptions",
                    },
                    Object {
                      "id": "blocklist",
                      "link": "securitySolutionUI:blocklist",
                      "title": "Blocklist",
                    },
                    Object {
                      "id": "response_actions_history",
                      "link": "securitySolutionUI:response_actions_history",
                      "title": "Response actions history",
                    },
                  ],
                  "id": "endpoints",
                  "link": "securitySolutionUI:endpoints",
                  "title": "Endpoints",
                },
              ],
              "id": "assets",
              "link": "securitySolutionUI:assets",
              "renderAs": "panelOpener",
              "title": "Assets",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:overview",
                      "link": "ml:overview",
                      "title": "Overview",
                    },
                    Object {
                      "id": "ml:notifications",
                      "link": "ml:notifications",
                      "title": "Notifications",
                    },
                    Object {
                      "id": "ml:memoryUsage",
                      "link": "ml:memoryUsage",
                      "title": "Memory usage",
                    },
                  ],
                  "id": undefined,
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:anomalyDetection",
                      "link": "ml:anomalyDetection",
                      "title": "Jobs",
                    },
                    Object {
                      "id": "ml:anomalyExplorer",
                      "link": "ml:anomalyExplorer",
                      "title": "Anomaly explorer",
                    },
                    Object {
                      "id": "ml:singleMetricViewer",
                      "link": "ml:singleMetricViewer",
                      "title": "Single metric viewer",
                    },
                    Object {
                      "id": "ml:suppliedConfigurations",
                      "link": "ml:suppliedConfigurations",
                      "title": "Supplied configurations",
                    },
                    Object {
                      "id": "ml:settings",
                      "link": "ml:settings",
                      "title": "Settings",
                    },
                  ],
                  "id": "category-anomaly_detection",
                  "title": "Anomaly detection",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:dataFrameAnalytics",
                      "link": "ml:dataFrameAnalytics",
                      "title": "Jobs",
                    },
                    Object {
                      "id": "ml:resultExplorer",
                      "link": "ml:resultExplorer",
                      "title": "Result explorer",
                    },
                    Object {
                      "id": "ml:analyticsMap",
                      "link": "ml:analyticsMap",
                      "title": "Analytics map",
                    },
                  ],
                  "id": "category-data_frame analytics",
                  "title": "Data frame analytics",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:nodesOverview",
                      "link": "ml:nodesOverview",
                      "title": "Trained models",
                    },
                  ],
                  "id": "category-model_management",
                  "title": "Model management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:fileUpload",
                      "link": "ml:fileUpload",
                      "title": "File data visualizer",
                    },
                    Object {
                      "id": "ml:indexDataVisualizer",
                      "link": "ml:indexDataVisualizer",
                      "title": "Data view data visualizer",
                    },
                    Object {
                      "id": "ml:esqlDataVisualizer",
                      "link": "ml:esqlDataVisualizer",
                      "title": "ES|QL data visualizer",
                    },
                    Object {
                      "id": "ml:dataDrift",
                      "link": "ml:dataDrift",
                      "title": "Data drift",
                    },
                  ],
                  "id": "category-data_visualizer",
                  "title": "Data visualizer",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:logRateAnalysis",
                      "link": "ml:logRateAnalysis",
                      "title": "Log Rate Analysis",
                    },
                    Object {
                      "id": "ml:logPatternAnalysis",
                      "link": "ml:logPatternAnalysis",
                      "title": "Log pattern analysis",
                    },
                    Object {
                      "id": "ml:changePointDetections",
                      "link": "ml:changePointDetections",
                      "title": "Change point detection",
                    },
                  ],
                  "id": "category-aiops_labs",
                  "title": "Aiops labs",
                },
              ],
              "id": "machine_learning-landing",
              "link": "securitySolutionUI:machine_learning-landing",
              "renderAs": "panelOpener",
              "title": "Machine learning",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "id": "entity_analytics-management",
              "link": "securitySolutionUI:entity_analytics-management",
              "sideNavStatus": "hidden",
              "title": "Entity Risk Score",
            },
            Object {
              "id": "entity_analytics-entity_store_management",
              "link": "securitySolutionUI:entity_analytics-entity_store_management",
              "sideNavStatus": "hidden",
              "title": "Entity Store",
            },
          ],
          "id": undefined,
        },
      ],
      "defaultIsCollapsed": false,
      "icon": "logoSecurity",
      "id": "security_solution_nav",
      "isCollapsible": false,
      "title": "Security",
      "type": "navGroup",
    },
  ],
  "footer": Array [
    Object {
      "icon": "launch",
      "link": "securitySolutionUI:get_started",
      "title": "Get started",
      "type": "navItem",
    },
    Object {
      "icon": "editorCodeBlock",
      "link": "dev_tools",
      "title": "Developer tools",
      "type": "navItem",
    },
    Object {
      "breadcrumbStatus": "hidden",
      "children": Array [
        Object {
          "link": "management",
          "title": "Stack Management",
        },
        Object {
          "link": "integrations",
          "title": "Integrations",
        },
      ],
      "icon": "gear",
      "id": "category-management",
      "title": "Management",
      "type": "navGroup",
    },
  ],
}
`;

exports[`formatNavigationTree creates the navigation tree for stateful 1`] = `
Object {
  "body": Array [
    Object {
      "breadcrumbStatus": "hidden",
      "children": Array [
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "id": "discover:",
              "link": "discover",
              "title": "Discover",
            },
            Object {
              "children": Array [
                Object {
                  "id": "overview",
                  "link": "securitySolutionUI:overview",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Overview",
                },
                Object {
                  "id": "detection_response",
                  "link": "securitySolutionUI:detection_response",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Detection & Response",
                },
                Object {
                  "id": "cloud_security_posture-dashboard",
                  "link": "securitySolutionUI:cloud_security_posture-dashboard",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Cloud Security Posture",
                },
                Object {
                  "id": "cloud_security_posture-vulnerability_dashboard",
                  "link": "securitySolutionUI:cloud_security_posture-vulnerability_dashboard",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Cloud Native Vulnerability Management",
                },
                Object {
                  "id": "entity_analytics",
                  "link": "securitySolutionUI:entity_analytics",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Entity Analytics",
                },
                Object {
                  "id": "data_quality",
                  "link": "securitySolutionUI:data_quality",
                  "renderAs": "item",
                  "sideNavStatus": "hidden",
                  "title": "Data Quality",
                },
              ],
              "id": "dashboards",
              "link": "securitySolutionUI:dashboards",
              "renderAs": "panelOpener",
              "title": "Dashboards",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "id": "rules-add",
                          "link": "securitySolutionUI:rules-add",
                          "title": "Add Rules",
                        },
                        Object {
                          "id": "rules-create",
                          "link": "securitySolutionUI:rules-create",
                          "title": "Create new rule",
                        },
                      ],
                      "id": "rules",
                      "link": "securitySolutionUI:rules",
                      "renderAs": "item",
                      "title": "Detection rules (SIEM)",
                    },
                    Object {
                      "id": "cloud_security_posture-benchmarks",
                      "link": "securitySolutionUI:cloud_security_posture-benchmarks",
                      "title": "Benchmarks",
                    },
                    Object {
                      "id": "exceptions",
                      "link": "securitySolutionUI:exceptions",
                      "title": "Shared exception lists",
                    },
                    Object {
                      "id": "siem_migrations-rules",
                      "link": "securitySolutionUI:siem_migrations-rules",
                      "title": "SIEM Rule Migrations",
                    },
                  ],
                  "id": "category-management",
                  "title": "Management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "coverage-overview",
                      "link": "securitySolutionUI:coverage-overview",
                      "title": "MITRE ATT&CK® Coverage",
                    },
                  ],
                  "id": "category-discover",
                  "title": "Discover",
                },
              ],
              "id": "rules-landing",
              "link": "securitySolutionUI:rules-landing",
              "renderAs": "panelOpener",
              "title": "Rules",
            },
            Object {
              "id": "alerts",
              "link": "securitySolutionUI:alerts",
              "title": "Alerts",
            },
            Object {
              "id": "attack_discovery",
              "link": "securitySolutionUI:attack_discovery",
              "title": "Attack discovery",
            },
            Object {
              "id": "cloud_security_posture-findings",
              "link": "securitySolutionUI:cloud_security_posture-findings",
              "title": "Findings",
            },
            Object {
              "children": Array [
                Object {
                  "id": "cases_create",
                  "link": "securitySolutionUI:cases_create",
                  "sideNavStatus": "hidden",
                  "title": "Create",
                },
                Object {
                  "id": "cases_configure",
                  "link": "securitySolutionUI:cases_configure",
                  "sideNavStatus": "hidden",
                  "title": "Settings",
                },
              ],
              "id": "cases",
              "link": "securitySolutionUI:cases",
              "renderAs": "panelOpener",
              "title": "Cases",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "id": "timelines-templates",
                      "link": "securitySolutionUI:timelines-templates",
                      "sideNavStatus": "hidden",
                      "title": "Templates",
                    },
                  ],
                  "id": "timelines",
                  "link": "securitySolutionUI:timelines",
                  "renderAs": "item",
                  "title": "Timelines",
                },
                Object {
                  "id": "notes",
                  "link": "securitySolutionUI:notes",
                  "renderAs": "item",
                  "title": "Notes",
                },
                Object {
                  "id": "osquery:",
                  "link": "osquery",
                  "renderAs": "item",
                  "title": "Osquery",
                },
              ],
              "id": "investigations",
              "link": "securitySolutionUI:investigations",
              "renderAs": "panelOpener",
              "title": "Investigations",
            },
            Object {
              "id": "threat_intelligence",
              "link": "securitySolutionUI:threat_intelligence",
              "title": "Intelligence",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-all",
                      "link": "securitySolutionUI:hosts-all",
                      "title": "All hosts",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-uncommon_processes",
                      "link": "securitySolutionUI:hosts-uncommon_processes",
                      "title": "Uncommon Processes",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-anomalies",
                      "link": "securitySolutionUI:hosts-anomalies",
                      "title": "Anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-events",
                      "link": "securitySolutionUI:hosts-events",
                      "title": "Events",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-risk",
                      "link": "securitySolutionUI:hosts-risk",
                      "title": "Host risk",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "hosts-sessions",
                      "link": "securitySolutionUI:hosts-sessions",
                      "title": "Sessions",
                    },
                  ],
                  "id": "hosts",
                  "link": "securitySolutionUI:hosts",
                  "renderAs": "item",
                  "title": "Hosts",
                },
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-flows",
                      "link": "securitySolutionUI:network-flows",
                      "title": "Flows",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-dns",
                      "link": "securitySolutionUI:network-dns",
                      "title": "DNS",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-http",
                      "link": "securitySolutionUI:network-http",
                      "title": "HTTP",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-tls",
                      "link": "securitySolutionUI:network-tls",
                      "title": "TLS",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-anomalies",
                      "link": "securitySolutionUI:network-anomalies",
                      "title": "Anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "network-events",
                      "link": "securitySolutionUI:network-events",
                      "title": "Events",
                    },
                  ],
                  "id": "network",
                  "link": "securitySolutionUI:network",
                  "renderAs": "item",
                  "title": "Network",
                },
                Object {
                  "children": Array [
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-all",
                      "link": "securitySolutionUI:users-all",
                      "title": "All users",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-authentications",
                      "link": "securitySolutionUI:users-authentications",
                      "title": "Authentications",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-anomalies",
                      "link": "securitySolutionUI:users-anomalies",
                      "title": "Anomalies",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-risk",
                      "link": "securitySolutionUI:users-risk",
                      "title": "User risk",
                    },
                    Object {
                      "breadcrumbStatus": "hidden",
                      "id": "users-events",
                      "link": "securitySolutionUI:users-events",
                      "title": "Events",
                    },
                  ],
                  "id": "users",
                  "link": "securitySolutionUI:users",
                  "renderAs": "item",
                  "title": "Users",
                },
              ],
              "id": "explore",
              "link": "securitySolutionUI:explore",
              "renderAs": "panelOpener",
              "title": "Explore",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "id": "fleet:agents",
                      "link": "fleet:agents",
                      "title": "Agents",
                    },
                    Object {
                      "id": "fleet:policies",
                      "link": "fleet:policies",
                      "title": "Policies",
                    },
                    Object {
                      "id": "fleet:enrollment_tokens",
                      "link": "fleet:enrollment_tokens",
                      "title": "Enrollment tokens",
                    },
                    Object {
                      "id": "fleet:uninstall_tokens",
                      "link": "fleet:uninstall_tokens",
                      "title": "Uninstall tokens",
                    },
                    Object {
                      "id": "fleet:data_streams",
                      "link": "fleet:data_streams",
                      "title": "Data streams",
                    },
                    Object {
                      "id": "fleet:settings",
                      "link": "fleet:settings",
                      "title": "Settings",
                    },
                  ],
                  "id": "fleet:",
                  "link": "fleet",
                  "title": "Fleet",
                },
                Object {
                  "children": Array [
                    Object {
                      "id": "policy",
                      "link": "securitySolutionUI:policy",
                      "title": "Policies",
                    },
                    Object {
                      "id": "trusted_apps",
                      "link": "securitySolutionUI:trusted_apps",
                      "title": "Trusted applications",
                    },
                    Object {
                      "id": "event_filters",
                      "link": "securitySolutionUI:event_filters",
                      "title": "Event filters",
                    },
                    Object {
                      "id": "host_isolation_exceptions",
                      "link": "securitySolutionUI:host_isolation_exceptions",
                      "title": "Host isolation exceptions",
                    },
                    Object {
                      "id": "blocklist",
                      "link": "securitySolutionUI:blocklist",
                      "title": "Blocklist",
                    },
                    Object {
                      "id": "response_actions_history",
                      "link": "securitySolutionUI:response_actions_history",
                      "title": "Response actions history",
                    },
                  ],
                  "id": "endpoints",
                  "link": "securitySolutionUI:endpoints",
                  "title": "Endpoints",
                },
              ],
              "id": "assets",
              "link": "securitySolutionUI:assets",
              "renderAs": "panelOpener",
              "title": "Assets",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:overview",
                      "link": "ml:overview",
                      "title": "Overview",
                    },
                    Object {
                      "id": "ml:notifications",
                      "link": "ml:notifications",
                      "title": "Notifications",
                    },
                    Object {
                      "id": "ml:memoryUsage",
                      "link": "ml:memoryUsage",
                      "title": "Memory usage",
                    },
                  ],
                  "id": undefined,
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:anomalyDetection",
                      "link": "ml:anomalyDetection",
                      "title": "Jobs",
                    },
                    Object {
                      "id": "ml:anomalyExplorer",
                      "link": "ml:anomalyExplorer",
                      "title": "Anomaly explorer",
                    },
                    Object {
                      "id": "ml:singleMetricViewer",
                      "link": "ml:singleMetricViewer",
                      "title": "Single metric viewer",
                    },
                    Object {
                      "id": "ml:suppliedConfigurations",
                      "link": "ml:suppliedConfigurations",
                      "title": "Supplied configurations",
                    },
                    Object {
                      "id": "ml:settings",
                      "link": "ml:settings",
                      "title": "Settings",
                    },
                  ],
                  "id": "category-anomaly_detection",
                  "title": "Anomaly detection",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:dataFrameAnalytics",
                      "link": "ml:dataFrameAnalytics",
                      "title": "Jobs",
                    },
                    Object {
                      "id": "ml:resultExplorer",
                      "link": "ml:resultExplorer",
                      "title": "Result explorer",
                    },
                    Object {
                      "id": "ml:analyticsMap",
                      "link": "ml:analyticsMap",
                      "title": "Analytics map",
                    },
                  ],
                  "id": "category-data_frame analytics",
                  "title": "Data frame analytics",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:nodesOverview",
                      "link": "ml:nodesOverview",
                      "title": "Trained models",
                    },
                  ],
                  "id": "category-model_management",
                  "title": "Model management",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:fileUpload",
                      "link": "ml:fileUpload",
                      "title": "File data visualizer",
                    },
                    Object {
                      "id": "ml:indexDataVisualizer",
                      "link": "ml:indexDataVisualizer",
                      "title": "Data view data visualizer",
                    },
                    Object {
                      "id": "ml:esqlDataVisualizer",
                      "link": "ml:esqlDataVisualizer",
                      "title": "ES|QL data visualizer",
                    },
                    Object {
                      "id": "ml:dataDrift",
                      "link": "ml:dataDrift",
                      "title": "Data drift",
                    },
                  ],
                  "id": "category-data_visualizer",
                  "title": "Data visualizer",
                },
                Object {
                  "breadcrumbStatus": "hidden",
                  "children": Array [
                    Object {
                      "id": "ml:logRateAnalysis",
                      "link": "ml:logRateAnalysis",
                      "title": "Log Rate Analysis",
                    },
                    Object {
                      "id": "ml:logPatternAnalysis",
                      "link": "ml:logPatternAnalysis",
                      "title": "Log pattern analysis",
                    },
                    Object {
                      "id": "ml:changePointDetections",
                      "link": "ml:changePointDetections",
                      "title": "Change point detection",
                    },
                  ],
                  "id": "category-aiops_labs",
                  "title": "Aiops labs",
                },
              ],
              "id": "machine_learning-landing",
              "link": "securitySolutionUI:machine_learning-landing",
              "renderAs": "panelOpener",
              "title": "Machine learning",
            },
          ],
          "id": undefined,
        },
        Object {
          "breadcrumbStatus": "hidden",
          "children": Array [
            Object {
              "id": "entity_analytics-management",
              "link": "securitySolutionUI:entity_analytics-management",
              "sideNavStatus": "hidden",
              "title": "Entity Risk Score",
            },
            Object {
              "id": "entity_analytics-entity_store_management",
              "link": "securitySolutionUI:entity_analytics-entity_store_management",
              "sideNavStatus": "hidden",
              "title": "Entity Store",
            },
          ],
          "id": undefined,
        },
      ],
      "defaultIsCollapsed": false,
      "icon": "logoSecurity",
      "id": "security_solution_nav",
      "isCollapsible": false,
      "title": "Security",
      "type": "navGroup",
    },
  ],
  "footer": Array [
    Object {
      "icon": "launch",
      "link": "securitySolutionUI:get_started",
      "title": "Get started",
      "type": "navItem",
    },
    Object {
      "icon": "editorCodeBlock",
      "link": "dev_tools",
      "title": "Developer tools",
      "type": "navItem",
    },
    Object {
      "breadcrumbStatus": "hidden",
      "children": Array [
        Object {
          "link": "management",
          "title": "Stack Management",
        },
        Object {
          "link": "monitoring",
          "title": "Stack Monitoring",
        },
        Object {
          "link": "integrations",
          "title": "Integrations",
        },
      ],
      "icon": "gear",
      "id": "category-management",
      "title": "Management",
      "type": "navGroup",
    },
  ],
}
`;
